# slideforge-mcp

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  PUBLISHING.md  README.md  glama.json  llms-install.md  pyproject.toml  server.json
.claude-plugin/: marketplace.json  plugin.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
examples/: README.md  claude-code.md  claude-desktop.json  cursor.json  langchain_slideforge.py  llamaindex_slideforge.py  workflows.md
skills/: README.md
skills/consulting-deck/: SKILL.md
skills/create-slide/: SKILL.md
skills/inspect-repair/: SKILL.md
skills/pdf-to-pptx/: SKILL.md
skills/sprint-report/: SKILL.md
skills/translate-pptx/: SKILL.md
src/slideforge_mcp/: __init__.py  __main__.py  server.py
src/slideforge_mcp/contract/: tools_list.prod.json
tests/: test_contract_parity.py
